[ADD] unity가 요청한 네비게이션에 필요한 정보값들 추가